--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
     <div class="container">
         <div class="left_container">
             <header class="left_header">
-                <img src="./lib/images/logo.svg" alt="icon" class="header_image"></img>
+                <img src="./lib/images/svg/logo.svg" alt="icon" class="header_image"></img>
             Dashboard
             </header>
-            <button class="left_btn"><img src="./lib/images/home.svg" alt="icon" class="left_btn_image">Home</button>
-            <button class="left_btn"><img src="./lib/images/profile.svg" alt="icon" class="left_btn_image">Profile</button>
-            <button class="left_btn"><img src="./lib/images/message.svg" alt="icon" class="left_btn_image">Messages</button>
-            <button class="left_btn"><img src="./lib/images/history.svg" alt="icon" class="left_btn_image">History</button>
-            <button class="left_btn"><img src="./lib/images/task.svg" alt="icon" class="left_btn_image">Tasks</button>
-            <button class="left_btn"><img src="./lib/images/community.svg" alt="icon" class="left_btn_image">Communities</button>
-            <button class="left_btn"><img src="./lib/images/settings.svg" alt="icon" class="left_btn_image">Settings</button>
-            <button class="left_btn"><img src="./lib/images/support.svg" alt="icon" class="left_btn_image">Support</button>
-            <button class="left_btn"><img src="./lib/images/privacy.svg" alt="icon" class="left_btn_image">Privacy</button>
+            <button class="left_btn"><img src="./lib/images/svg/home.svg" alt="icon" class="left_btn_image">Home</button>
+            <button class="left_btn"><img src="./lib/images/svg/profile.svg" alt="icon" class="left_btn_image">Profile</button>
+            <button class="left_btn"><img src="./lib/images/svg/message.svg" alt="icon" class="left_btn_image">Messages</button>
+            <button class="left_btn"><img src="./lib/images/svg/history.svg" alt="icon" class="left_btn_image">History</button>
+            <button class="left_btn"><img src="./lib/images/svg/task.svg" alt="icon" class="left_btn_image">Tasks</button>
+            <button class="left_btn"><img src="./lib/images/svg/community.svg" alt="icon" class="left_btn_image">Communities</button>
+            <button class="left_btn"><img src="./lib/images/svg/settings.svg" alt="icon" class="left_btn_image">Settings</button>
+            <button class="left_btn"><img src="./lib/images/svg/support.svg" alt="icon" class="left_btn_image">Support</button>
+            <button class="left_btn"><img src="./lib/images/svg/privacy.svg" alt="icon" class="left_btn_image">Privacy</button>
         </div>
         <div class="right_container">
             <header class="right_header">
                 <div class="header_item">
-                    <img src="" alt="icon">
+                    <img src="./lib/images/svg/magnify.svg" alt="icon" class="left_btn_image">
                     <input type="text" id="input">
                 </div>
                 <div class="header_item" id="profile">
-                    <img src="" alt="icon">
-                    <img src="" alt="profile pic">
-                    <p>Morgan Oakley</p>
+                    <img src="./lib/images/svg/bell.svg" alt="icon" class="left_btn_image">
+                    <img src="./lib/images/profilepic/profile1.jpeg" alt="profile pic" class="profile_pic">
+                    Morgan Oakley
                 </div>
                 <div class="header_item">
-                    <img src="" alt="profile pic">
+                    <img src="./lib/images/profilepic/profile1.jpeg" alt="profile pic" class="user_pic">
                         <div>
                             <p>Hi there,</p>
                             <p>Morgan Oakley(@morgan)</p>
@@ -48,24 +48,45 @@
                     <button class="right_btn">Share</button>
                 </div>
             </header>
-            <main>
+            <div class="right_content">
                 <div class="header_main">
-                    <p>Your Projects</p>
-                    <p>Announcements</p>
+                    <span>Your Projects</span>
+                    <span>Announcements</span>
                 </div>
-                <div class="projects">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                </div>
-                <div class="right_column">
-                    <div></div>
-                    <div></div>
-                </div>
-            </main>
+                <main>
+                    <div class="projects">
+                        <div class="card">
+                            <div class="card_border"></div>
+                            <div class="card_content"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card_border"></div>
+                            <div class="card_content"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card_border"></div>
+                            <div class="card_content"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card_border"></div>
+                            <div class="card_content"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card_border"></div>
+                            <div class="card_content"></div>
+                        </div>
+                        <div class="card">
+                            <div class="card_border"></div>
+                            <div class="card_content"></div>
+                        </div>
+                    </div>
+                    <div class="right_column">
+                        <div class="column_card"></div>
+                        <span>Trending</span>
+                        <div class="column_card"></div>
+                    </div>
+                </main>
+            </div>
         </div>
     </div>
 </body>
