--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 <div class="header_item" id="profile">
                     <img src="./lib/images/svg/bell.svg" alt="icon" class="left_btn_image">
                     <img src="./lib/images/profilepic/profile1.jpeg" alt="profile pic" class="profile_pic">
-                    Morgan Oakley
+                    Duncan
                 </div>
                 <div class="header_item">
                     <img src="./lib/images/profilepic/profile1.jpeg" alt="profile pic" class="user_pic">
                         <div>
-                            <p>Hi there,</p>
-                            <p>Morgan Oakley(@morgan)</p>
+                            <p id="hithere">Hi there,</p>
+                            <p>Duncan(@rockduncan)</p>
                         </div>
                     </img>
                 </div>
@@ -57,27 +57,75 @@
                     <div class="projects">
                         <div class="card">
                             <div class="card_border"></div>
-                            <div class="card_content"></div>
+                            <div class="card_content">
+                                <p id="card_title">Super Cool Project</p>
+                                <p id="card_text">Lorem ipsum dolor sit amet, 
+                                    consectetur adipiscing elit. 
+                                    Vivamus non ex libero. Sed
+                                    scelerisque congue augue,
+                                    auctor cursus mi. Aenean nec.
+                                </p>
+                            </div>
                         </div>
                         <div class="card">
                             <div class="card_border"></div>
-                            <div class="card_content"></div>
+                            <div class="card_content">
+                                <p id="card_title">Less Cool Project</p>
+                                <p id="card_text">Lorem ipsum dolor sit amet, 
+                                    consectetur adipiscing elit. 
+                                    Vivamus non ex libero. Sed
+                                    scelerisque congue augue,
+                                    auctor cursus mi. Aenean nec.
+                                </p>
+                            </div>
                         </div>
                         <div class="card">
                             <div class="card_border"></div>
-                            <div class="card_content"></div>
+                            <div class="card_content">
+                                <p id="card_title">Impossible App</p>
+                                <p id="card_text">Lorem ipsum dolor sit amet, 
+                                    consectetur adipiscing elit. 
+                                    Vivamus non ex libero. Sed
+                                    scelerisque congue augue,
+                                    auctor cursus mi. Aenean nec.
+                                </p>
+                            </div>
                         </div>
                         <div class="card">
                             <div class="card_border"></div>
-                            <div class="card_content"></div>
+                            <div class="card_content">
+                                <p id="card_title">Easy Peasy App</p>
+                                <p id="card_text">Lorem ipsum dolor sit amet, 
+                                    consectetur adipiscing elit. 
+                                    Vivamus non ex libero. Sed
+                                    scelerisque congue augue,
+                                    auctor cursus mi. Aenean nec.
+                                </p>
+                            </div>
                         </div>
                         <div class="card">
                             <div class="card_border"></div>
-                            <div class="card_content"></div>
+                            <div class="card_content">
+                                <p id="card_title">Ad Blocker</p>
+                                <p id="card_text">Lorem ipsum dolor sit amet, 
+                                    consectetur adipiscing elit. 
+                                    Vivamus non ex libero. Sed
+                                    scelerisque congue augue,
+                                    auctor cursus mi. Aenean nec.
+                                </p>
+                            </div>
                         </div>
                         <div class="card">
                             <div class="card_border"></div>
-                            <div class="card_content"></div>
+                            <div class="card_content">
+                                <p id="card_title">Money Maker</p>
+                                <p id="card_text">Lorem ipsum dolor sit amet, 
+                                    consectetur adipiscing elit. 
+                                    Vivamus non ex libero. Sed
+                                    scelerisque congue augue,
+                                    auctor cursus mi. Aenean nec.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="right_column">
