--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 </div>
                 <div class="header_item">
                     <img src="./lib/images/profilepic/profile1.jpeg" alt="profile pic" class="user_pic">
-                        <div>
+                        <div id="profile_text">
                             <p id="hithere">Hi there,</p>
-                            <p>Duncan(@rockduncan)</p>
+                            <p>Duncan(@duncan)</p>
                         </div>
                     </img>
                 </div>
@@ -50,8 +50,8 @@
             </header>
             <div class="right_content">
                 <div class="header_main">
-                    <span>Your Projects</span>
-                    <span>Announcements</span>
+                    <p>Your Projects</p>
+                    <p>Announcements</p>
                 </div>
                 <main>
                     <div class="projects">
@@ -65,6 +65,17 @@
                                     scelerisque congue augue,
                                     auctor cursus mi. Aenean nec.
                                 </p>
+                                <div class="card_btns">
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/share.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/heart.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/copy.svg" alt=""></img>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -77,6 +88,17 @@
                                     scelerisque congue augue,
                                     auctor cursus mi. Aenean nec.
                                 </p>
+                                <div class="card_btns">
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/share.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/heart.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/copy.svg" alt=""></img>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -89,6 +111,17 @@
                                     scelerisque congue augue,
                                     auctor cursus mi. Aenean nec.
                                 </p>
+                                <div class="card_btns">
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/share.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/heart.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/copy.svg" alt=""></img>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -101,6 +134,17 @@
                                     scelerisque congue augue,
                                     auctor cursus mi. Aenean nec.
                                 </p>
+                                <div class="card_btns">
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/share.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/heart.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/copy.svg" alt=""></img>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -113,6 +157,17 @@
                                     scelerisque congue augue,
                                     auctor cursus mi. Aenean nec.
                                 </p>
+                                <div class="card_btns">
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/share.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/heart.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/copy.svg" alt=""></img>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -125,13 +180,79 @@
                                     scelerisque congue augue,
                                     auctor cursus mi. Aenean nec.
                                 </p>
+                                <div class="card_btns">
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/share.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/heart.svg" alt=""></img>
+                                    </button>
+                                    <button class="card_button">
+                                        <img class="card_img_button" src="./lib/images/svg/copy.svg" alt=""></img>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="right_column">
-                        <div class="column_card"></div>
-                        <span>Trending</span>
-                        <div class="column_card"></div>
+                        <div class="column_card">
+                            <div>
+                                <p class="trending_name">Site Maintenance</p>
+                                <p class="trending_desc">Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit. 
+                                Vivamus non ex libero.
+                                </p>
+                            </div>
+                            <hr class="divider">
+                            <div>
+                                <p class="trending_name">community Share Day</p>
+                                <p class="trending_desc">Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit. 
+                                Vivamus non ex libero.
+                                </p>
+                            </div>
+                            <hr class="divider">
+                            <div>
+                                <p class="trending_name">Updated Privacy Policy</p>
+                                <p class="trending_desc">Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit. 
+                                Vivamus non ex libero.
+                                </p>
+                            </div>
+                        </div>
+                        <p id="column_title">Trending</p>
+                        <div class="column_card">
+                            <div class="trending_content">
+                                <div class="trending_card">
+                                    <img src="./lib/images/profilepic/profile2.png" alt="profile pic" class="column_profile_pic">
+                                    <div class="trending_text">
+                                        <p class="trending_name">@gwen</p>
+                                        <p class="trending_desc">Super Cool Project</p>
+                                    </div>
+                                </div>
+                                <div class="trending_card">
+                                    <img src="./lib/images/profilepic/profile1.jpeg" alt="profile pic" class="column_profile_pic">
+                                    <div class="trending_text">
+                                        <p class="trending_name">@duncan</p>
+                                        <p class="trending_desc">Less Cool Project</p>
+                                    </div>
+                                </div>
+                                <div class="trending_card">
+                                    <img src="./lib/images/profilepic/profile3.png" alt="profile pic" class="column_profile_pic">
+                                    <div class="trending_text">
+                                        <p class="trending_name">@courtney</p>
+                                        <p class="trending_desc">Impossible App</p>
+                                    </div>
+                                </div>
+                                <div class="trending_card">
+                                    <img src="./lib/images/profilepic/profile5.png" alt="profile pic" class="column_profile_pic">
+                                    <div class="trending_text">
+                                        <p class="trending_name">@heather</p>
+                                        <p class="trending_desc">Money Maker</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </main>
             </div>
